@@ -48,12 +48,6 @@
             </child>
 
             <child>
-              <widget class="Placeholder" id="None">
-                <property name="visible">yes</property>
-              </widget>
-            </child>
-
-            <child>
               <widget class="GtkTable" id="repeat_table">
                 <property name="homogeneous">no</property>
                 <property name="row_spacing">4</property>
@@ -354,12 +348,6 @@
                 <property name="fill">no</property>
               </packing>
             </child>
-
-            <child>
-              <widget class="Placeholder" id="None">
-                <property name="visible">yes</property>
-              </widget>
-            </child>
           </widget>
         </child>
 
@@ -542,7 +530,7 @@
                         <property name="visible">yes</property>
 
                         <child>
-                          <widget class="Placeholder" id="None">
+                          <widget class="GtkImage" id="bell_test_image">
                             <property name="visible">yes</property>
                           </widget>
                         </child>
