@@ -1,6 +1,8 @@
 2001-12-18  Bradford Hovinen  <hovinen@ximian.com>
 
 	* keyboard-properties.c: Port to GConf/GNOME 2.0. Many changes.
+	(setup_dialog): Use correct widget name
+	(create_dialog): Use gtk_image_ functions for the volume icon
 
 2001-10-12  Bradford Hovinen  <hovinen@ximian.com>
 
